lab1/Test/L1-A-11-42.cmm
int TyrYaMwPU ( ) {
  float KZ0WAYvUSmvbwxOn10Z [ 1355163778 ] , FPeIONGb2 
    = XJdBJ1Lzs = wkZTo > A3GCh9I9ncUURrCAN - YpbKIBw 
    * b [ sf0XY_Q256xdgU3tB8 = lfqHkmx0oTg || qDpqT && 
    qwrKoMiwRDVogaCJiqG >= cYLd4s4FGzIwmihjg / ! - ! ( 
    N3WanPWIN <= ! - - lXZ_jPaCYPsUHXc ( iFseWR85VT2WNNNHAT 
    == kq2zBENrlobeKFcin8h + BLq2SLV5 / - ! DJcsSgx3oYVfmq7C 
    ( BzH3qadk7EyC2TzOMVQ || W != OEDbBMvrkU - lmDaw ( 
    Gkiqu || piBaKQo < GgbcZ8rj5_ ) / 1444460954.1801732047 
    ) * ! 1543682465 , - - iKIOIJQg ) + - < W ( ) ) . 
    i5trB ] ;
}
int ;
struct {
};
struct Hrm4Nj jpdiJPSi5ILekSd2 
;
struct YfsE6VUZuDSAYz7jn_ ;
struct t {
  int zmdWlRY 
  int wgpUTeiMsnW ;
  int MzJnqcD 
  int suKi6thsB2G ;
  struct sFYCqFtWBLP_vH3 pECpfAB3NpC0lQJ5wN ;
};
struct ZMPJz6FV ;
int ;
int ;
int GHtlzjz2T , VIZ7JkMVYWM3FXKmFXLi 

;
int JpkpTinv7S9mN8GyZ ( int YJqkFN4 , int dXIUBX ) 
  {
  IsSGtf7NW3WV 
  if ( QzDM9k1vQC7 )   I7pe8P9Tgs ;
else   if ( AizofZdWg5Mo )   while ( tYR6nHHHprDfL_a 
    )   if ( f33 ) {
    f7pFaZZ ;
    return ljS6vBOwETV ;
  }else   S0Ton9l ;




}
